# giga-backend

./: .env_example  db.sqlite3  main.py  pyproject.toml
backend/: settings.py  urls.py
myApp/: admin.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
myApp/migrations/: 0001_initial.py  0002_galleryimage_customuser_product.py
myApp/templates/email/: contact_confirmation.html  contact_submission.html  quote_request.html
